# funding_rate_arbitrage

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  资金费率套利机器人设计文档.md
config/: config.yml.example
src/funding_rate_arbitrage_bot/: arbitrage_engine.py  config_manager.py  data_fetcher.py  logger_config.py
